# rosbag-topic-remove

./: .gitignore  LICENSE  README.md  changelog.rst  pyproject.toml  setup.cfg
requirements/: requirements-build.txt  requirements-common.txt  requirements-dev.txt
src/rosbag_topic_remove/: __init__.py  __main__.py  topic_remover.py  utils.py
